--- a/templates/include/topnav.html
+++ b/templates/include/topnav.html
@@ -14,13 +14,13 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item force-select-all {{'active' if active_page == 'home' }}">
+                <li class="nav-item  {{'active' if active_page == 'home' }}">
                     <a class="nav-link" href="/">Home</a>
                 </p></li>
-                <li class="nav-item force-select-all {{'active' if active_page == 'unsplash' }}">
+                <li class="nav-item  {{'active' if active_page == 'unsplash' }}">
                     <a class="nav-link" href="/plumber">Plumber</a>
                 </p></li>
-                <li class="nav-item force-select-all {{'active' if active_page == 'twoforms' }}">
+                <li class="nav-item  {{'active' if active_page == 'twoforms' }}">
                     <a class="nav-link" href="/realestate">Real estate agent</a>
                 </p></li>
 
