--- a/frontend/src/scss/components/_sidenav.scss
+++ b/frontend/src/scss/components/_sidenav.scss
@@ -32,6 +32,7 @@
                 max-width: 10rem;
                 max-height: 10rem;
                 border: 0.5rem solid fade-out($white, 0.8);
+                background-color: #333b3f;
             }
         }
         .navbar-collapse {
