--- a/frontend/src/scss/_global.scss
+++ b/frontend/src/scss/_global.scss
@@ -25,13 +25,16 @@ h1 {
 }
 
 p.lead {
-    font-size: 1.15rem;
+    font-size: 1.25rem;
     font-weight: 400;
+}
+p.un {
+    font-size:1.10rem;
 }
 
 .subheading {
     font-family: $headings-font-family;
     text-transform: uppercase;
     font-weight: 500;
-    font-size: 1.5rem;
+    font-size: 1.75rem;
 }
